<resources>


    <string name="app_name">Storyboard-Generator</string>
    <string name="btnRegister">Registrarse</string> <!--main, Login y Register-->
    <string name="btnLogin">Iniciar sesión</string> <!--Login y register-->
    <string name="tvPhone">Telefono</string><!--Login, profile, y Register (profile form)-->
    <string name="etPhone">Telefono</string><!--Login y Register (profile form)-->
    <string name="tvEmail">Correo electrónico</string><!--Login, profile, y Register (profile form)-->
    <string name="etEmail">Email</string><!--Login, profile, y Register (profile form)-->
    <string name="tvPss">Contraseña</string><!--Login, profile, y Register (profile form)-->
    <string name="etPss">Contraseña</string><!--Login y Register (profile form)-->
    <string name="tvPssConf">Confirmar Contraseña</string><!--Login, profile, y Register (profile form)-->
    <string name="etPssConf">Confirmar Contraseña</string><!--Login y Register (profile form)-->
    <string name="tvNameUser">Usuario</string><!--register, profile y profile form-->
    <string name="etNameUser">Usuario</string><!--register, profile y profile form-->
    <string name="tvEmailResp">sofMendez@gmail.com..</string><!--Respuesta provisional en user profile y edit user form-->
    <string name="tvPssResp">***</string><!--Respuesta provisional en user profile y edit user form-->
    <string name="tvPhoneResp">3229543498</string><!--Respuesta provisional en user profile y edit user form-->
    <string name="btnConfirmar">Confirmar</string>
    <string name="Select">Seleccione una opción</string><!--DropDown de los forms-->

    <!--MAIN - (Pantalla principal)-->
    <string name="tvBienvenidoSC">Bienvenido</string>
    <string name="btnLoginSC">Ingresar</string>

    <!--REGISTER-->
    <string name="ivRegister"></string>
    <string name="tvRegisterTitle">Registro</string>

    <!--PROFILE FORM-->

    <string name="btnSave">Guardar cambios</string>

    <!--LOGIN-->
    <string name="tvLoginTitle">Ingreso</string>


    <!--SETTINGS-->
    <string name="tvTema">Cambiar tema</string>
    <string name="tvHelp">Ayuda</string>
    <string name="tvExit">Salir</string>

    <!--MEMBERS TEAM-->
    <string name="tvMembersTeam">Integrantes del equipo</string>
    <string name="tvNameMembersTeam"></string>
    <string name="tvRolMembersTeam"></string>

    <!--PROJECTS-->
    <string name="tvTitleMain">Proyectos</string>
    <string name="tvTitleNameProject">Storyboard #1</string>
    <string name="tvStudioProjects">Ghibli</string>
    <string name="tvEditeTime">Hace 20 h</string>

    <!--CREATE PROJECT FORM-->
    <string name="tvTitleCreateProject">Nuevo proyecto</string>
    <string name="tvProjectNameForm">Nombre del proyecto: </string>
    <string name="etProjectNameForm">ejm: Proyecto #1..</string>
    <string name="tvProductoraProjectForm">Productora</string>
    <string name="etProductoraProjectForm">Productora</string>
    <string name="tvDateStartProject">Fecha de inicio</string>
    <string name="etDateStartProject">DD/MM/YYYY</string>
    <string name="tvDateEndProject">Fecha de finalización</string>
    <string name="etDateEndProject">DD/MM/YYYY</string>
    <string name="tvDescriptionProject">Descripción</string>
    <string name="etDescriptionProject">Descripción del proyecto</string>
    <string name="tvOptionPF">Elija una opción</string>
    <string name="tvCamera">Cámara</string>
    <string name="tvStorage">Archivos</string>

    <!--PROJECT TEMPLATE-->
    <string name="tvTitleProjectTemplate">Proyecto #1</string>
    <string name="tvProductoraSubtitlePT">Equipo:</string>
    <string name="tvProductoraPT">Ghibli</string>
    <string name="tvEsceneTitlePT">Escena #1</string>
    <string name="tvEscenaryPT">Bosque</string>
    <string name="tvSpacePT">Exterior</string>
    <string name="tvTimePT">Noche</string>
    <string name="tvDurationPT">Duración:</string>
    <string name="tvTimeDurationPT">30 seg..</string>

    <!--PROJECT TEMPLATE-->
    <string name="tvTitleEsceneTemplate">Escena #1</string>
    <string name="tvTitleDurationEsceneET">Duración:</string>
    <string name="tvDurationEsceneET">2 minutos</string>
    <string name="tvTitleDescriptionEsceneET">Descripción:</string>
    <string name="tvDescriptionEsceneET">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="tvTitlePlaneET">Plano #1</string>
    <string name="tvTitleTypePlaneET">Tipo:</string>
    <string name="tvTypePlaneET">Info del tipo</string>
    <string name="tvTitleDurationPlaneET">Duración:</string>
    <string name="tvDurationPlaneET">20 seg</string>
    <string name="tvSharePIN">24357</string>

    <!--SCENES MAIN-->

    <!--SCENE FORM-->
    <string name="tvTitleCreateEsceneForm">Nueva escena</string>
    <string name="tvPositionEsceneForm">Posición</string>
    <string name="etPositionEsceneForm">Posición</string>
    <string name="tvDurationEsceneForm">Duración</string>
    <string name="etDurationEsceneForm">ejem: 00:32s</string>
    <string name="tvEscenaryEsceneForm">Escenario</string>
    <string name="etEscenaryEsceneForm">ejm:.. El bosque</string>
    <string name="tvDescriptionEsceneForm">Descripción</string>
    <string name="etDescriptionEsceneForm">Descripción</string>
    <string name="tvTimeEsceneForm">Tiempo</string>
    <string name="etTimeEsceneForm">ejem:.. día</string>

    <!--PLANE TEMPLATE-->
    <string name="tvTitlePlane">Plano#1</string>
    <string name="tvDurationSubtitle">Duración:</string>
    <string name="tvDurationPlane">20 seg</string>
    <string name="tvShotSubtitle">Tiro:</string>
    <string name="tvShotPlane">info..</string>
    <string name="tvPlaneSubtitle">Plano:</string>
    <string name="tvPlanePlane">Horizontal</string>
    <string name="tvMoveSubtitle">Movimiento:</string>
    <string name="tvMovePlane">Horizontal</string>
    <string name="tvArgumentSubtitle">Argumento:</string>
    <string name="tvArgumentPlane">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>

    <!--PLANE FORM-->
    <string name="tvTitleCreatePlaneForm">Nuevo plano</string>
    <string name="tvPositionPlaneForm">Posición</string>
    <string name="etPositionPlaneForm">ejem: 1..</string>
    <string name="tvTypePlaneForm">Tipo de plano</string>
    <string name="etTypePlaneForm">Tipo</string>
    <string name="tvDurationPlaneForm">Duración</string>
    <string name="etDurationPlaneForm">ejem: 00:00:32 seg</string>
    <string name="tvShotPlaneForm">Tiro</string>
    <string name="etShotPlaneForm">Shot</string>
    <string name="tvMovePlaneForm">Movimiento</string>
    <string name="etMovePlaneForm">Vertical</string>
    <string name="tvDescriptionPlaneForm">Descripción</string>
    <string name="etDescriptionPlaneForm">Escriba su descripción..</string>

    <!--CONFIGURACIÓN DE ARCHIVO-->
    <string name="tvTitleConfig">Configuración de archivo</string>
    <string name="tvNameFile">Nombre del archivo</string>
    <string name="etNameFile"></string>
    <string name="tvFormatoFile">Formato</string>
    <string name="tvNumScenes">N. de escenas</string>
    <string name="tvOrientation">Orientación</string>
    <string name="btnSaveFile">Confirmar</string>

    <!--USER PROFILE-->
    <string name="tvTitleUserProfile">Perfil</string>
    <string name="tvUserNameUP">SofíaMendez24</string>
    <string name="btnUserProfileEdit">Editar</string>

    <!--USER PROFILE FORM-->
    <string name="tvTitleUserProfileForm">Editar perfil</string>

    <!--SETTINGS-->
    <string name="tvTitleSettings">Ajustes</string>
    <string name="tvTheme">Cambiar tema</string>
    <string name="tvInfo">Información</string>
    <string name="tvExitSt">Salir</string>

    <!--TEAM MEMBERS-->
    <string name="tvTitleTeamMembers">Miembros</string>
    <string name="tvNameMember">DemirYaman</string>
    <string name="tvRolMember">Administrador</string>



</resources>