<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightBackground"
    tools:context=".CreateEsceneForm">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/GraygeLight"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/ibBackArrow"
                android:layout_width="16dp"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/Transparent"
                android:contentDescription="Parra cerrar el formulario"
                android:paddingRight="20dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/close" />

            <TextView
                android:id="@+id/tvTitleCreateEsceneForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/sans_font"
                android:text="@string/tvTitleCreateEsceneForm"
                android:textAlignment="center"
                android:textColor="@color/GrayBackground"
                android:textSize="30dp"
                android:layout_marginRight="7dp"/>

            <ImageButton
                android:id="@+id/ibDeleteScene"
                android:layout_width="6dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@color/Transparent"
                android:contentDescription="Eliminar escena"
                android:scaleType="fitCenter"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/trash" />




        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:textColorHint="@color/GrayBackground">


                <TextView
                    android:id="@+id/tvPositionSceneForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sans_font"
                    android:text="@string/tvPositionEsceneForm"
                    android:textColor="@color/BlackTurquesa"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/etPositionSceneForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/BlackTurquesa"
                    android:hint="@string/etPositionEsceneForm"
                    android:ems="10"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="18dp"
                    android:textColorHint="@color/GrayBackground"/>

                <TextView
                    android:id="@+id/tvDurationSceneForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sans_font"
                    android:text="@string/tvDurationEsceneForm"
                    android:textColor="@color/BlackTurquesa"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etDurationSceneForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/BlackTurquesa"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/etDurationEsceneForm"
                    android:minHeight="48dp"
                    android:textColorHint="@color/GrayBackground"/>

                <TextView
                    android:id="@+id/tvScenerySceneForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sans_font"
                    android:text="@string/tvEscenaryEsceneForm"
                    android:textColor="@color/BlackTurquesa"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etScenerySceneForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/BlackTurquesa"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/etEscenaryEsceneForm"
                    android:minHeight="48dp"
                    android:textColorHint="@color/GrayBackground"/>

                <TextView
                    android:id="@+id/tvDescriptionSceneForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sans_font"
                    android:text="@string/tvDescriptionProject"
                    android:textColor="@color/BlackTurquesa"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etDescriptionSceneForm"
                    android:layout_width="361dp"
                    android:layout_height="93dp"
                    android:gravity="top|left"
                    android:hint="@string/etDescriptionProject"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:scrollHorizontally="false"
                    android:textColorHint="@color/GrayBackground"/>

                <TextView
                    android:id="@+id/tvTimeSceneForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sans_font"
                    android:text="@string/tvTimeEsceneForm"
                    android:textColor="@color/BlackTurquesa"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etTimeSceneForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/BlackTurquesa"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/etTimeEsceneForm"
                    android:minHeight="48dp"
                    android:textColorHint="@color/GrayBackground"/>


                <Button
                    android:id="@+id/btnConfirmarScene"
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/BlackTurquesa"
                    android:padding="10dp"
                    android:text="@string/btnConfirmar"
                    android:textColor="@color/white"
                    android:textSize="20dp" />


            </LinearLayout>
        </ScrollView>

</LinearLayout>
