<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/ExtraLightBlue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBienvenidoMainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/tvBienvenidoSC"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/BlueLightBtn"
        android:fontFamily="@font/sans_font"
        android:textSize="40dp" />
    <!--<com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/nose">-->
    <ImageView
        android:id="@+id/ivLogoSC"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        app:srcCompat="@drawable/logo" />
    <!--</com.google.android.material.card.MaterialCardView>-->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/BlueLightBtn"
        android:padding="10dp"
        android:text="@string/btnLogin"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/IndustrialBlue"
        android:background="@drawable/diseno_boton"
        android:padding="10dp"
        android:text="@string/btnRegister"
        android:textSize="25dp" />


</LinearLayout>